PROJECT("libcheats" C)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

SET(CMAKE_C_FLAGS "-O2 -Wall -s")

ADD_DEFINITIONS(-D_DEBUG)

SET(SRCS mystring.c cheatlist.c readcheats.c libcheats.c)
ADD_LIBRARY(cheats SHARED ${SRCS})

ENABLE_TESTING()
ADD_EXECUTABLE(test1 test1.c)
TARGET_LINK_LIBRARIES(test1 cheats)
ADD_TEST(test1 ${EXECUTABLE_OUTPUT_PATH}/test1)
